--- a/src/test/resources/configfiles/locators.properties
+++ b/src/test/resources/configfiles/locators.properties
@@ -1,5 +1,5 @@
 mailid_field=/html/body/main/div/form/div[1]/div[1]/div/input
 password_field=/html/body/main/div/form/div[1]/div[2]/div/input
 login_button=/html/body/main/div/form/div[1]/div[3]/div/button
-#username=testshivaji1@gmail.com
-#password=Testshivaji1@gmail.com
+#username=
+#password=
